<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="12dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/QuestionStyle"
        android:text="@string/questionOne"/>

    <EditText
        android:id="@+id/questionOneAnswer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/questionOneHint"/>

        <View
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="@color/colorOrange" />


    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="@color/colorYellow" />


    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="@color/colorBlue" />


    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="@color/colorIndigo" />


    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="@color/colorViolet" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/QuestionStyle"
            android:text="@string/questionTwo"/>

        <CheckBox
            android:id="@+id/checkboxOne"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/questionTwoOptionOne"/>

        <CheckBox
            android:id="@+id/checkboxTwo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/questionTwoOptionTwo"/>

        <CheckBox
            android:id="@+id/checkboxThree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/questionTwoOptionThree"/>

        <CheckBox
            android:id="@+id/checkboxFour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/questionTwoOptionFour"/>

        <CheckBox
            android:id="@+id/checkboxFive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/questionTwoOptionFive"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/QuestionStyle"
            android:text="@string/questionThree"/>

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/radioButtonYes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/questionThreeOptionYes"/>

            <RadioButton
                android:id="@+id/radioButtonNo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/questionThreeOptionNo"/>

        </RadioGroup>

        <View
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:background="@color/colorRed" />

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonCheckResults"
        android:onClick="checkResults"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonResetScore"
        android:onClick="resetScore"/>


</LinearLayout>

</ScrollView>